--- a/app/views/web/index.html.erb
+++ b/app/views/web/index.html.erb
@@ -1,2 +1,12 @@
-<h1>Web#index</h1>
-<p>Find me in app/views/web/index.html.erb</p>
+<section class="hero">
+  <div class="hero-body">
+    <div class="container has-text-centered">
+      <h1 class="title">
+        食べ処へようこそ！
+      </h1>
+      <h2 class="subtitle">
+        近場の食事処を簡単に検索できるサービスです
+      </h2>
+    </div>
+  </div>
+</section>
