--- a/app/views/web/about.html.erb
+++ b/app/views/web/about.html.erb
@@ -1,2 +1,16 @@
-<h1>Web#about</h1>
-<p>Find me in app/views/web/about.html.erb</p>
+<section class="hero">
+  <div class="hero-body">
+    <div class="container has-text-centered">
+      <h1 class="title">
+        食べ処について
+      </h1>
+      <h2 class="subtitle pt-3">
+        <div class="container">
+            <p class="mt-3">食べ処はHamada.rbの有志によって開発・運営されているサービスです。</p>
+            <p class="mt-3">浜田市内の食事処を位置情報から検索できます。</p>
+            <p class="mt-3">また食事処のレビューなども共有できます。</p>
+        </div>
+      </h2>
+    </div>
+  </div>
+</section>
