--- a/app/views/web/about.html.erb
+++ b/app/views/web/about.html.erb
@@ -8,7 +8,7 @@
         <div class="container">
             <p class="mt-3">食べ処はHamada.rbの有志によって開発・運営されているサービスです。</p>
             <p class="mt-3">浜田市内の食事処を位置情報から検索できます。</p>
-            <p class="mt-3">また食事処のレビューなども共有できます。</p>
+            <p class="mt-3">また食事処のレビューなども投稿できます。</p>
         </div>
       </h2>
     </div>
