--- a/app/views/web/index.html.erb
+++ b/app/views/web/index.html.erb
@@ -22,7 +22,7 @@
         </div>
     </section>
 
-    <div class="columns">
+    <div class="columns mx-0">
         <div class="column">
             <div class="card">
                 <div class="card-image">
@@ -157,7 +157,7 @@
         </div>
     </section>
 
-    <div class="columns">
+    <div class="columns mx-0">
         <div class="column">
             <div class="card">
                 <div class="card-image">
