--- a/app/views/layouts/components/_header.html.erb
+++ b/app/views/layouts/components/_header.html.erb
@@ -13,11 +13,11 @@
 
   <div id="navbarBasicExample" class="navbar-menu">
     <div class="navbar-start">
-      <a class="navbar-item" href="/">
+      <a class="navbar-item" href="/" data-turbolinks="false">
         Home
       </a>
 
-      <a class="navbar-item" href="/about">
+      <a class="navbar-item" href="/about" data-turbolinks="false">
         About
       </a>
     </div>
