食事処管理へのリンク追加

--- a/app/views/layouts/components/dashboard/_header.html.erb
+++ b/app/views/layouts/components/dashboard/_header.html.erb
@@ -16,6 +16,10 @@
       <a class="navbar-item" href="/dashboard" data-turbolinks="false">
         Home
       </a>
+
+      <a class="navbar-item" href="/dashboard/restaurants" data-turbolinks="false">
+        食事処管理
+      </a>
     </div>
 
     <div class="navbar-end">
