--- a/app/views/dashboard/restaurants/edit.html.erb
+++ b/app/views/dashboard/restaurants/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form', restaurant: @restaurant %>
 
-<%= link_to 'Show', @restaurant %> |
+<%= link_to 'Show', dashboard_restaurants_path(@restaurant) %> |
 <%= link_to 'Back', dashboard_restaurants_path %>
