--- a/app/views/web/index.html.erb
+++ b/app/views/web/index.html.erb
@@ -25,29 +25,31 @@
     <div class="columns mx-0">
         <% @popular_restaurants.each do |restaurant| %>
             <div class="column">
-                <div class="card">
-                    <div class="card-image">
-                        <figure class="image is-4by3">
-                            <img src="https://bulma.io/images/placeholders/1280x960.png" alt="Placeholder image">
-                        </figure>
-                    </div>
-                    <div class="card-content">
-                        <div class="media">
-                            <div class="media-left">
-                                <figure class="image is-48x48">
-                                    <img src="https://bulma.io/images/placeholders/96x96.png" alt="Placeholder image">
-                                </figure>
-                            </div>
-                            <div class="media-content">
-                                <p class="title is-4"><%= restaurant.name %></p>
-                            </div>
+                <%= link_to restaurant_path(restaurant) do %>
+                    <div class="card">
+                        <div class="card-image">
+                            <figure class="image is-4by3">
+                                <img src="https://bulma.io/images/placeholders/1280x960.png" alt="Placeholder image">
+                            </figure>
                         </div>
+                        <div class="card-content">
+                            <div class="media">
+                                <div class="media-left">
+                                    <figure class="image is-48x48">
+                                        <img src="https://bulma.io/images/placeholders/96x96.png" alt="Placeholder image">
+                                    </figure>
+                                </div>
+                                <div class="media-content">
+                                    <p class="title is-4"><%= restaurant.name %></p>
+                                </div>
+                            </div>
 
-                        <div class="content">
-                            <%= restaurant.content %>
+                            <div class="content">
+                                <%= restaurant.content %>
+                            </div>
                         </div>
                     </div>
-                </div>
+                <% end %>
             </div>
         <% end %>
     </div>
@@ -67,29 +69,31 @@
     <div class="columns mx-0">
         <% @new_restaurants.each do |restaurant| %>
             <div class="column">
-                <div class="card">
-                    <div class="card-image">
-                        <figure class="image is-4by3">
-                            <img src="https://bulma.io/images/placeholders/1280x960.png" alt="Placeholder image">
-                        </figure>
-                    </div>
-                    <div class="card-content">
-                        <div class="media">
-                            <div class="media-left">
-                                <figure class="image is-48x48">
-                                    <img src="https://bulma.io/images/placeholders/96x96.png" alt="Placeholder image">
-                                </figure>
-                            </div>
-                            <div class="media-content">
-                                <p class="title is-4"><%= restaurant.name %></p>
-                            </div>
+                <%= link_to restaurant_path(restaurant) do %>
+                    <div class="card">
+                        <div class="card-image">
+                            <figure class="image is-4by3">
+                                <img src="https://bulma.io/images/placeholders/1280x960.png" alt="Placeholder image">
+                            </figure>
                         </div>
+                        <div class="card-content">
+                            <div class="media">
+                                <div class="media-left">
+                                    <figure class="image is-48x48">
+                                        <img src="https://bulma.io/images/placeholders/96x96.png" alt="Placeholder image">
+                                    </figure>
+                                </div>
+                                <div class="media-content">
+                                    <p class="title is-4"><%= restaurant.name %></p>
+                                </div>
+                            </div>
 
-                        <div class="content">
-                            <%= restaurant.content %>
+                            <div class="content">
+                                <%= restaurant.content %>
+                            </div>
                         </div>
                     </div>
-                </div>
+                <% end %>
             </div>
         <% end %>
     </div>
