--- a/app/views/dashboard/restaurants/index.html.erb
+++ b/app/views/dashboard/restaurants/index.html.erb
@@ -2,25 +2,38 @@
 
 <h1>Restaurants</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+<div class="container">
+    <div class="columns mx-0">
+        <% @restaurants.each do |restaurant| %>
+            <div class="column">
+                <%= link_to dashboard_restaurant_path(restaurant) do %>
+                    <div class="card">
+                        <div class="card-image">
+                            <figure class="image is-4by3">
+                                <img src="https://bulma.io/images/placeholders/1280x960.png" alt="Placeholder image">
+                            </figure>
+                        </div>
+                        <div class="card-content">
+                            <div class="media">
+                                <div class="media-left">
+                                    <figure class="image is-48x48">
+                                        <img src="https://bulma.io/images/placeholders/96x96.png" alt="Placeholder image">
+                                    </figure>
+                                </div>
+                                <div class="media-content">
+                                    <p class="title is-4"><%= restaurant.name %></p>
+                                </div>
+                            </div>
 
-  <tbody>
-    <% @restaurants.each do |restaurant| %>
-      <tr>
-        <td><%= restaurant.name %></td>
-        <td><%= link_to 'Show', [:dashboard, restaurant] %></td>
-        <td><%= link_to 'Edit', edit_dashboard_restaurant_path(restaurant) %></td>
-        <td><%= link_to 'Destroy', [:dashboard, restaurant], method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
+                            <div class="content">
+                                <%= restaurant.content %>
+                            </div>
+                        </div>
+                    </div>
+                <% end %>
+            </div>
+        <% end %>
+    </div>
+</div>
 
 <%= link_to 'New Restaurant', new_dashboard_restaurant_path %>
